Fixes long text from bleeding out of disabled buttons.

--- a/src/sass/pages/_course.scss
+++ b/src/sass/pages/_course.scss
@@ -80,6 +80,18 @@
 								padding-left: 10px;
 								padding-right: 10px;
 							}
+							& > span.register.disabled {
+								bottom: 3px !important;
+								padding-top: 10px !important;
+								text-transform: uppercase;
+								min-height: 100% !important;
+								height: auto !important;
+								position: relative;
+								&:hover {
+									cursor: default;
+									color: $mischka !important;
+								}
+							}
 							& > span.register.disabled.disabled,
 							& > span.register {
 								color: $white;
@@ -95,18 +107,6 @@
 									color: $vivid-tangerine;
 									background-color: transparent;
 									border: none;
-								}
-							}
-							& > span.register.disabled {
-								bottom: 0 !important;
-								padding-top: 10px !important;
-								text-transform: uppercase;
-								min-height: 100% !important;
-								height: auto !important;
-								position: relative;
-								&:hover {
-									cursor: default;
-									color: $mischka !important;
 								}
 							}
 							> a.find-courses,
